# rayan

./: .gitignore  CLAUDE.md  PRODUCT.md  README.md  cors.json  deploy-backend.sh  deploy-frontend.sh
.specify/memory/: constitution.md
backend/: .dockerignore  .env.example  .gcloudignore  Dockerfile  fix_room_positions.py  main.py  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/agents/: capture_agent.py  enrichment_agent.py  memory_architect.py  narrator_agent.py  recall_agent.py
backend/app/agents/tools/: tools.py
backend/app/core/: firebase.py  firestore.py  gemini.py  storage.py
backend/app/middleware/: auth.py
backend/app/models/: artifact.py  capture_session.py  common.py  enrichment.py  palace.py  room.py  user.py
backend/app/routers/: artifacts.py  enrichment.py  health.py  palace.py  rooms.py  search.py  sessions.py
backend/app/services/: artifact_service.py  capture_service.py  content_extractor.py  diagram_service.py  embedding_service.py  enrichment_service.py  live_session_manager.py  room_service.py  search_service.py  seed_service.py  synthesis_service.py  user_service.py  web_search.py
backend/app/websocket/: auth.py  handlers.py  manager.py  responses.py
frontend/: .env.example  .firebaserc  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json
frontend/.firebase/: hosting.ZGlzdA.cache
frontend/public/: pcm-processor.js
frontend/src/: App.js  App.tsx  index.css  main.js
frontend/src/config/: api.js  (+7 more)
infrastructure/terraform/: main.tf
(+166 files in other folders)
